--- a/MusicStudio/MainWindow.xaml
+++ b/MusicStudio/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="Misuc Studio" Height="405" Width="530" ResizeMode="CanMinimize">
     <Grid>
-        <ListBox x:Name="playList" HorizontalAlignment="Left" Height="158" Margin="23,56,0,0" VerticalAlignment="Top" Width="469" MouseDoubleClick="btnPlay_Click"/>
+        <ListBox x:Name="playList" HorizontalAlignment="Left" Height="158" Margin="23,56,0,0" VerticalAlignment="Top" Width="469" MouseDoubleClick="btnPlay_Click" AllowDrop="True" Drop="PlayList_OnDrop"/>
         <Button x:Name="btnPlay" ToolTip="Воспроизвести" HorizontalAlignment="Left" Margin="107,327,0,0" VerticalAlignment="Top" Width="30" Background="Transparent" BorderBrush="Transparent" Click="btnPlay_Click">
             <Image Source="Images/Play.png" Height="24" Width="24"></Image>
         </Button>
