--- a/MusicStudio/MainWindow.xaml
+++ b/MusicStudio/MainWindow.xaml
@@ -11,7 +11,7 @@
             <DockPanel Margin="5">
                 <DockPanel>
                     <TextBlock DockPanel.Dock="Top" Text="{Binding Path=TopDisplayText}" Width="300"/>
-                    <TextBlock DockPanel.Dock="Bottom" Text="{Binding Path=BottomDisplayText}" Width="300"/>
+                    <TextBlock DockPanel.Dock="Bottom" Text="{Binding Path=BottomDisplayText}" Width="300" Foreground="Gray" />
                 </DockPanel>
                 <TextBlock Width="100"/>
                 <TextBlock Text="{Binding Path=DurationText}" HorizontalAlignment="Right" TextAlignment="Right"/>
