--- a/MusicStudio/MainWindow.xaml
+++ b/MusicStudio/MainWindow.xaml
@@ -19,7 +19,7 @@
         </DataTemplate>
     </Window.Resources>
     <Grid>
-        <ListBox x:Name="playList" ItemTemplate="{StaticResource listTemplate}" HorizontalAlignment="Left" Height="158" Margin="23,56,0,0" VerticalAlignment="Top" Width="469" MouseDoubleClick="btnPlay_Click" AllowDrop="True" Drop="PlayList_OnDrop" ScrollViewer.HorizontalScrollBarVisibility="Disabled"/>
+        <ListBox x:Name="playList" ItemTemplate="{StaticResource listTemplate}" HorizontalAlignment="Left" Height="158" Margin="23,56,0,0" VerticalAlignment="Top" Width="469" MouseDoubleClick="btnPlay_Click" KeyDown="PlayList_OnKeyDown" AllowDrop="True" Drop="PlayList_OnDrop" ScrollViewer.HorizontalScrollBarVisibility="Disabled"/>
         <Button x:Name="btnPlay" ToolTip="Воспроизвести" HorizontalAlignment="Left" Margin="102,384,0,0" VerticalAlignment="Top" Width="30" Background="Transparent" BorderBrush="Transparent" Click="btnPlay_Click">
             <Image Source="Images/Play.png" Height="24" Width="24"></Image>
         </Button>
